[package]
name = "tests"
version = "0.1.0"
authors = ["John Austin <kleptine@gmail.com>"]
edition = "2018"

[lib]
name = "test_utilities"
path = "utilities.rs"

[dev-dependencies]
shared = { path = "../shared" }
client = { path = "../client" }

[dependencies]
shared = { path = "../shared" }
server = { path = "../server" }
failure = "*"
log = "0.4"
git2 = {git = "https://github.com/Kleptine/git2-rs.git" }
env_logger = "0.5.13"
regex = "1.0.5"
uuid = { version = "0.7", features = ["v4"] }
hostname = "^0.1"
nickel = "0.10.1"
bytes = "0.4"
futures = "0.1"
simple_logger = "0.5"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

actix = "0.7"
actix-web = "^0.7"
tempfile = "3"

#tempfile = "3"
#regex = "1.0.5"
#uuid = { version = "0.7", features = ["v4"] }
#hostname = "^0.1"
#gotham = "*"
#gotham_derive = "*"
#serde = "*"
#serde_derive = "*"
#serde_json = "*"
#hyper = "*"
#mime = "*"
