[package]
name = "client"
version = "0.1.0"
authors = ["John Austin <kleptine@gmail.com>"]
edition = "2018"

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "pre-commit"
path = "src/hooks/pre_commit.rs"

[[bin]]
name = "post-commit"
path = "src/hooks/post_commit.rs"

[[bin]]
name = "post-rewrite"
path = "src/hooks/post_rewrite.rs"

[[bin]]
name = "post-merge"
path = "src/hooks/post_merge.rs"

[dependencies]
shared = {path = "../shared"}
git2 = {git = "https://github.com/Kleptine/git2-rs.git" }
log = "0.4"
#env_logger = { version = "~0.6", default-features = false }
tempfile = "3"
regex = "1.0.5"
uuid = { version = "0.7", features = ["v4"] }
hostname = "^0.1"
reqwest = "*"
serde_json = "*"
http = "*"
url = "*"
failure = "*"
simple_logger = "0.5.0"

[dev-dependencies]
#env_logger = { version = "~0.6", default-features = false }
#simple_logger = "0.5.0"
tempfile = "3"
