[package]
name = "server"
version = "0.1.0"
authors = ["John Austin <kleptine@gmail.com>"]
edition = "2018"

[[bin]]
name = "start-server"
path = "server.rs"

[lib]
name = "server"
path = "server.rs"

[dependencies]
shared = {path = "../shared"}
bytes = "0.4"
git2 = {git = "https://github.com/Kleptine/git2-rs.git" }
futures = "0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

actix = "0.7"
actix-web = "^0.7"
env_logger = "0.5.13"
log = "0.4"
simple_logger = "0.5.0"
failure = "*"
failure_derive = "*"
structopt = "0.2"
